sumo/tests/netconvert/import/XML/errors/broken_edge/edge#nolanes__false4/errors.netconvert
Error: The lane number is not numeric in edge '4'.
Quitting (on error).
